# hyphae

./: .gitignore  build-ami.sh  connect.sh  push-agent
agent/: Cargo.toml
agent/src/: common.rs  control_loop.rs  main.rs  operations.rs  runtime.rs  state.rs  tasks.rs  tests.rs  worktree.rs
packer/: 10-containers.network  hyphae-node.pkr.hcl  install-deps.sh  rt_tables
terraform/: network.tf  nodes.tf
